ExterSgAndVpce/sg.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: Deploy SecurityGroups
#----------------------------------------------
Parameters:
  #------------------
  Environment:
    Type: String
    AllowedPattern: "[a-zA-Z0-9=-@+?[?]?<?>._]*"
    ConstraintDescription: Can contain only ASCII characters.
    Description: (required) Environment name

#----------------------------------------------
Resources:
  #------------------ Security Groups
  BastionSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub ${Environment}-BastionSG
      GroupDescription: For Bastion Instances
      VpcId: 
        Fn::ImportValue: !Sub ${Environment}-VpcExter-VpcId
      Tags:
        - Key: Name
          Value: !Sub ${Environment}-BastionSG
      SecurityGroupIngress:
        -
          IpProtocol: tcp
          FromPort: 3389
          ToPort: 3389
          CidrIp: 0.0.0.0/0
  #--
  ProxySG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub ${Environment}-ProxySG
      GroupDescription: For Proxy Instances
      VpcId: 
        Fn::ImportValue: !Sub ${Environment}-VpcExter-VpcId
      Tags:
        - Key: Name
          Value: !Sub ${Environment}-ProsySG
      SecurityGroupIngress:
        -
          IpProtocol: tcp
          FromPort: 3128
          ToPort: 3128
          CidrIp: 
            Fn::ImportValue: !Sub ${Environment}-VpcFunc-VpcCidr
        -
          IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
Outputs:
  #------------------ Security Group
  BastionSGId:
    Description: BastionSG Security Group Id
    Value: !Ref BastionSG
    Export:
      Name: !Sub ${AWS::StackName}-BastionSGId
  ProxySGId:
    Description: ProxySG Security Group Id
    Value: !Ref ProxySG
    Export:
      Name: !Sub ${AWS::StackName}-ProxySGId
